--- a/src/webaccess/help/pt-BR/search.html
+++ b/src/webaccess/help/pt-BR/search.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Searching Folders and Files</title> 
+<title>Pesquisando pastas e arquivos</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -47,45 +47,28 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 
   
 	
-  <h3><a name="browse"></a>Searching for Folders And Files</h3>
-  <p> The Search page helps you locate the files or folders of your interest. 
-    Use the search tool located at the top right of the page for this purpose. 
-    Type the name of the file or folder in the search entry field and press Enter 
-    to get the search result in the Search page with the search text highlighted 
-    in yellow. </p>
-  <p>Use one or more of the following search methods and press Enter.</p>
+  <h3><a name="browse"></a>Pesquisando pastas e arquivos</h3>
+  <p> A p&aacute;gina Pesquisar ajuda voc&ecirc; a localizar os arquivos ou pastas de seu interesse. Use a ferramenta de pesquisa localizada na parte superior direita da p&aacute;gina para isso. Digite o nome do arquivo ou pasta no campo de entrada da pesquisa e pressione Enter para obter o resultado da pesquisa na p&aacute;gina Pesquisar com o texto pesquisado real&ccedil;ado em amarelo. </p>
+  <p>Use um ou mais dos seguintes m&eacute;todos e pressione Enter.</p>
   <UL>
     <LI> 
-      <P>Type one or more letters of the name of the file or folders in the Search 
-        entry field.</P>
+      <P>Digite uma ou mais letras do nome do arquivo ou da pasta no campo de entrada Pesquisar.</P>
     </LI>
     <LI>
-      <P>Type an asterisk (*) in the Search iFolders field to return a list of 
-        all iFolders on the system.</P>
+      <P>Digite um asterisco (*) no campo Pesquisar iFolders para retornar uma lista de todos os iFolders no sistema.</P>
     </LI>
     <LI>
-      <P>Leave the Search iFolders field empty to return a list of all iFolders 
-        on the system.</P>
+      <P>Deixe o campo Pesquisar iFolders vazio para retornar uma lista de todos os iFolders no sistema.</P>
     </LI>
   </UL>
-  <p>Do not click anywhere in the page until the page completely refreshes, then 
-    you can browse or manage the files or folders listed in the search results. 
-    Scroll up and down to browse the search results and locate the folder or file 
-    of your interest. The combination of the file or folder name and date created 
-    can help you identify the file or folder you seek.</P>
+  <p>N&atilde;o clique na p&aacute;gina at&eacute; que ela seja totalmente atualizada; em seguida, voc&ecirc; poder&aacute; procurar ou gerenciar pastas listadas nos resultados da pesquisa. Role para baixo e para cima para procurar os resultados da pesquisa e localize a pasta ou o arquivo de seu interesse. A combina&ccedil;&atilde;o do nome do arquivo ou da pasta e a data de cria&ccedil;&atilde;o podem ajud&aacute;-lo a identificar o arquivo ou pasta que voc&ecirc; procura.</P>
   
 
   
-<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="details.html">Viewing iFolder Properties
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
+<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Acessando as pastas do iFolder</A><BR><A HREF="details.html">Vendo as propriedades do iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
 
   <p>&nbsp; </p>
-<P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
-<SUP><SMALL>TM</SMALL></SUP>, etc.) denotes a Novell trademark. An 
-asterisk (*) denotes a third-party trademark. For more information, 
-see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+<P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 </html>
