--- a/src/webaccess/help/pt-BR/browse.html
+++ b/src/webaccess/help/pt-BR/browse.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Browsing iFolders</title> 
+<title>Procurando pastas do iFolder</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -42,76 +42,41 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b"><a name="top"></a>Accessing Folders and Files in Your iFolder</h3>
-  <p> You can reach the Browse page by clicking any of the iFolder link listed 
-    on the Home page.</p>
-  <p>Use this page to access folders and files within the selected iFolder in 
-    the current account. For any selected iFolder, you can view a list of its 
-    folders and files, upload and download files, create folders, and delete folders 
-    and files. </p>
+  <h3 class="head3b"><a name="top"></a>Acessando pastas e arquivos no iFolder</h3>
+  <p> Para acessar a p&aacute;gina Procurar, clique em qualquer link do iFolder listado na Home page. </p>
+  <p>Use esta p&aacute;gina para acessar pastas e arquivos dentro do iFolder na conta atual. Em qualquer iFolder selecionado, voc&ecirc; pode ver uma lista contendo as pastas e os arquivos dele, fazer upload e download de arquivos, criar pastas e apagar pastas e arquivos. </p>
   <BLOCKQUOTE>
-    <P><B><FONT SIZE="-1">NOTE:</FONT></B> <FONT SIZE="-1">You cannot either access 
-      or select <img src="../../images/ifolder_16-gray.gif" width="16" height="16" alt="Shared icon"> 
-      disabled iFolders.</FONT></P>
+    <P><B><FONT SIZE="-1">NOTA:</FONT></B> <FONT SIZE="-1">Voc&ecirc; n&atilde;o pode acessar ou selecionar <img src="../../images/ifolder_16-gray.gif" width="16" height="16" alt="pastas do iFolder desabilitadas"> &iacute;cone Compartilhado.</FONT></P>
   </BLOCKQUOTE> 
   
   
-  <h3><a name="manage"></a>Managing Folders and Files in An iFolder</h3>
-  <p>Within an iFolder, you can perform 
-the following tasks:</p><blockquote> <p><b>View a List of Folders and 
-Files</b><br>
-      The Browse page lists folders and files alphabetically. Scroll to locate 
-      the directory or file of interest. </p>
-    <p><b>Navigate 
-a Directory</b><br>
-      Click name of the folder <img src="../../images/folder_16.png" width="16" height="16" alt="Folder icon"> 
-      to open the folder and view a list of its contents. To return to a higher- 
-      level directory, use the navigation bar given at the top. You can click 
-      either on the icon or the name to return to the desired directory.<br>
-       </p><p><b>Open or Save a File</b><br>Click 
-the name of the file <img src="../../images/file_16.gif" width="16" height="16" alt="File icon"> 
-you want to open or save. </p><ul> <li><p>Click Open to view the file's 
-contents. You must have a compatible application on your computer to 
-open the file. If you plan to work in the file, download the file, 
-modify the file, and then upload it.</p></li><li><p>Click Save to save 
-the file on your local hard drive or to a mapped network drive. Navigate 
-to the location where you want to place the file, then click Save. 
-The file is downloaded to your computer.</p></li></ul><p><b>Create 
-a New Folder</b> <br> Click New Folder link to create a new folder.<br></p><p><b>Delete 
-Folders or Files</b><br>
-      Select the check box next to one or more folders or files you want to delete, 
-      then click Delete to confirm the deletion.</p>
-    <p><b>Upload 
-a File</b> <br>
-      Click Upload, and in the Upload page, click Browse and locate the local 
-      file you want to upload, then click Open &gt; Upload. When the page refreshes, 
-      the file appears alphabetically in the list.</p>
-    <p><b>View History</b> <br>
-      Click <img src="../../images/document-properties.png" width="16" height="16" alt="File icon"> 
-      to view the history.</p>
-	  <p><b>Delete an iFolder</b></p>
-  <p>To delete an iFolder:</p>
+  <h3><a name="manage"></a>Gerenciando pastas e arquivos em um iFolder</h3>
+  <p>Em uma pasta do iFolder, &eacute; poss&iacute;vel executar as seguintes tarefas:</p><blockquote> <p><b>Ver uma lista de pastas e arquivos</b> <br>
+      A p&aacute;gina Procurar lista pastas e arquivos alfabeticamente. Role a tela para localizar o diret&oacute;rio ou o arquivo de seu interesse. </p>
+    <p><b>Navegar em um diret&oacute;rio</b><br>
+      Clique no nome da pasta <img src="../../images/folder_16.png" width="16" height="16" alt="&iacute;cone Pasta"> para abrir a pasta e ver uma lista do seu conte&uacute;do. Para retornar a um diret&oacute;rio de n&iacute;vel superior, use a barra de navega&ccedil;&atilde;o na parte superior. Voc&ecirc; pode clicar no &iacute;cone ou no nome para retornar ao diret&oacute;rio desejado.<br>
+       </p><p><b>Abrir ou gravar um arquivo</b><br>Clique no nome do arquivo <img src="../../images/file_16.gif" width="16" height="16" alt="&iacute;cone Arquivo"> que deseja abrir ou gravar. </p><ul> <li><p>Clique em Abrir para ver o conte&uacute;do do arquivo. Voc&ecirc; deve ter um aplicativo compat&iacute;vel com o computador para abrir o arquivo. Se planeja trabalhar no arquivo, fa&ccedil;a seu download, modifique-o e, em seguida, fa&ccedil;a o upload.</p></li><li><p>Clique em Gravar para gravar o arquivo no disco r&iacute;gido local ou em uma unidade de rede mapeada. Navegue at&eacute; a localiza&ccedil;&atilde;o em que deseja colocar o arquivo e clique em Gravar. Ser&aacute; feito o download do arquivo no computador.</p></li></ul><p><b>Criar uma Nova Pasta</b> <br> Clique no link Nova Pasta para criar uma pasta nova.<br></p><p><b>Apagar pastas ou arquivos</b><br>
+      Marque a caixa de sele&ccedil;&atilde;o ao lado de uma ou mais pastas que voc&ecirc; deseja apagar e clique em Apagar para confirmar a exclus&atilde;o.</p>
+    <p><b>Fazer upload de um arquivo</b> <br>
+      Clique em Upload e, na p&aacute;gina Upload, clique em Procurar e localize o arquivo local do qual deseja fazer upload e clique em Abrir &gt; Upload. Quando a p&aacute;gina &eacute; atualizada, o arquivo &eacute; exibido em ordem alfab&eacute;tica na lista.</p>
+    <p><b>Hist&oacute;rico de Exibi&ccedil;&atilde;o</b> <br>
+      Clique no <img src="../../images/document-properties.png" width="16" height="16" alt="&iacute;cone Arquivo"> para ver o hist&oacute;rico.</p>
+	  <p><b>Apagar um iFolder</b></p>
+  <p>Para apagar um iFolder:</p>
   <ol>
   
     <li> 
-        <p>Click Delete link listed under Actions at the left side of the page.
-        <p> <p>A dialogue box appears, asks you whether 
-        you want to delete the current iFolder. </p>
+        <p>Clique no link Apagar listado nas A&ccedil;&otilde;es no lado esquerdo da p&aacute;gina.
+        <p> <p>Aparece uma caixa de di&aacute;logo perguntando se voc&ecirc; deseja apagar o iFolder atual. </p>
     </li>
     <li> 
-      <p>Click OK in the dialogue box to confirm the iFolder deletion. </p>
+      <p>Clique em OK na caixa de di&aacute;logo para confirmar a exclus&atilde;o do iFolder. </p>
     </li>
-    <li>Click Cancel to cancel the operation.</li>
+    <li>Clique em Cancelar para cancelar a opera&ccedil;&atilde;o.</li>
   </ol>
   </blockquote> 
  
-<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="details.html">Viewing iFolder Properties
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
-<SUP><SMALL>TM</SMALL></SUP>, etc.) denotes a Novell trademark. An 
-asterisk (*) denotes a third-party trademark. For more information, 
-see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Acessando as pastas do iFolder</A><BR><A HREF="details.html">Vendo as propriedades do iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 </html>
