--- a/src/webaccess/help/pt-BR/history.html
+++ b/src/webaccess/help/pt-BR/history.html
@@ -1,10 +1,10 @@
 <html>
 
    <head>
-<meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+<meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access --> 
-<title>iFolder History</title> 
+<title>Hist&oacute;rico do iFolder</title> 
 
 <!-- Metadata --> <meta name="Author" content="iFolder 3.x Documentation Manager"> 
 <meta name="date" content="02-17-2005"> 
@@ -45,23 +45,12 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b">Viewing iFolder History</h3>
-  <p> Use this page to view the iFolder history. </p>
-  <p>The History page tracks and displays all the iFolder operations performed 
-    on the selected iFolder. It lists all the folders and files that have been 
-    added to or removed from the selected iFolder by an individual user or a LDAPGroup 
-    member. It shows the time and date of iFolder operations performed, and the 
-    username that tells who performed the iFolder operations on the selected iFolder 
-    and on its files and folders.</p>
-	<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
-  <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="browse.html">Accessing Folders and Files in Your iFolder
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
- <P CLASS="copyright">A trademark symbol 
-(<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP>, etc.) 
-denotes a Novell trademark. An asterisk (*) denotes a third-party trademark. 
-For more information, see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+  <h3 class="head3b">Vendo o hist&oacute;rico do iFolder</h3>
+  <p> Use esta p&aacute;gina para ver o hist&oacute;rico do iFolder </p>
+  <p>A p&aacute;gina Hist&oacute;rico controla e exibe todas as opera&ccedil;&otilde;es realizadas no iFolder selecionado. Ela lista todas as pastas e arquivos que foram adicionados ou removidos por um usu&aacute;rio individual ou membro do Grupo LDAP do iFolder selecionado. Ela mostra a hora e o dia em que as opera&ccedil;&otilde;es do iFolder foram realizadas, al&eacute;m do nome de usu&aacute;rio, que informa quem executou as opera&ccedil;&otilde;es no iFolder selecionado e nos seus arquivos e pastas.</p>
+	<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
+  <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Acessando seus iFolders</A><BR><A HREF="browse.html">Acessando pastas e arquivos no seu iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
+ <P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 
 </html>
