--- a/src/webaccess/help/pt-BR/home.html
+++ b/src/webaccess/help/pt-BR/home.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
@@ -42,106 +42,68 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b"><a name="top"></a>Accessing Your iFolders</h3>
-  <p> Use this page to access all the iFolders available to you in this account. 
-    Available iFolders include those you own and those others have shared either 
-    with you or with the LDAPGroup you belong to. You can access shared iFolders 
-    through Web Access even if you have not set up the iFolder on a local computer.</p>
+  <h3 class="head3b"><a name="top"></a>Acessando as pastas do iFolder</h3>
+  <p> Use esta p&aacute;gina para acessar todas as pastas do iFolder dispon&iacute;veis nesta conta. As pastas do iFolder dispon&iacute;veis incluem as que lhe pertencem e aquelas que outras pessoas compartilharam com voc&ecirc; ou com o Grupo LDAP ao qual voc&ecirc; pertence. Voc&ecirc; pode acessar pastas do iFolder compartilhadas atrav&eacute;s do Web Access mesmo que n&atilde;o tenha configurado o iFolder em um computador local.</p>
 	
 	  
-  <p><img src="../../images/ifolder_user_16.gif" width="16" height="16" alt="Shared icon"> 
-    icon indicates that the iFolder is Regular.<br>
-    <img src="../../images/encrypt_ilock2_16.gif" width="16" height="16" alt="Shared icon"> 
-    icon indicates that the iFolder is Encrypted.<br>
-    <img src="../../images/ifolder_16-gray.gif" width="16" height="16" alt="Shared icon"> 
-    icon indicates that the iFolder is disabled. You cannot either access a disabled 
-    iFolder or select it for any iFolder operations.</p>
-	<p>For each iFolder, you can view the created date and the respective owner. 
-    Click the iFolder link to view the list of its folders and files in a new 
-    page. </p>
-  <p>For more information, see the following:</p><blockquote > 
-<p><a href="#login" target="_self">Logging In and Logging Out</a> <br>
-<a href="#browse" target="_self">Searching For iFolder</a> <br>
-             <a href="#manage" target="_self">Create New iFolder</a> <br>
-<a href="#delete" target="_self">Delete an iFolder</a></p></blockquote>
-<h3><a name="login"></a>Logging In and Logging Out</h3>
-  <p>If the system connection times out when you are working in your iFolders, 
-    Web Access returns you to the login page. You can log in again to resume working 
-    without closing your browser.</p>
-  <p>Log out by clicking Logout in the upper right header area, then close your 
-    browser. Logout will redirect you to the URL that your Admin has set while 
-    configuring the setup. If you do not log out, your session remains open until 
-    your session times out, which can be a security risk. </p>
-<p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p>
+  <p>O &iacute;cone <img src="../../images/ifolder_user_16.gif" width="16" height="16" alt="Compartilhado"> indica que o iFolder &eacute; Comum.<br>
+    O &iacute;cone <img src="../../images/encrypt_ilock2_16.gif" width="16" height="16" alt="&iacute;cone Compartilhado"> indica que o iFolder est&aacute; Criptografado.<br>
+    O &iacute;cone <img src="../../images/ifolder_16-gray.gif" width="16" height="16" alt="Compartilhado"> indica que o iFolder est&aacute; desabilitado. Voc&ecirc; n&atilde;o pode acessar um iFolder desabilitado nem selecion&aacute;-lo para qualquer opera&ccedil;&atilde;o do iFolder.</p>
+	<p>Para cada iFolder, voc&ecirc; pode ver a data de cria&ccedil;&atilde;o e o respectivo propriet&aacute;rio. Clique no link do iFolder para ver em uma nova p&aacute;gina a lista com as pastas e os arquivos desse iFolder. </p>
+  <p>Para obter mais informa&ccedil;&otilde;es, consulte:</p><blockquote > 
+<p><a href="#login" target="_self">Efetuando login e logout</a> <br>
+<a href="#browse" target="_self">Pesquisando iFolder</a> <br>
+             <a href="#manage" target="_self">Criar novo iFolder</a> <br>
+<a href="#delete" target="_self">Apagar um iFolder</a></p></blockquote>
+<h3><a name="login"></a>Efetuando login e logout</h3>
+  <p>Se o tempo de espera da conex&atilde;o do sistema se esgotar enquanto voc&ecirc; estiver trabalhando nas pastas do iFolder, o Web Access retornar&aacute; para a p&aacute;gina de login. &Eacute; poss&iacute;vel efetuar login novamente para continuar o trabalho sem fechar o browser.</p>
+  <p>Efetue logout clicando em Logout na &aacute;rea superior direita do cabe&ccedil;alho e, em seguida, feche o browser. Ao efetuar logout voc&ecirc; ser&aacute; redirecionado para o URL que o seu Administrador estabeleceu durante a defini&ccedil;&atilde;o da configura&ccedil;&atilde;o. Se voc&ecirc; n&atilde;o efetuar logout, a sess&atilde;o permanecer&aacute; aberta at&eacute; o tempo de espera se esgotar, o que pode representar um risco de seguran&ccedil;a. </p>
+<p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a></p>
 
-  <h3><a name="browse"></a>Searching For iFolders</h3>
-  <p> The search tool located at the top right of the page helps you locate the 
-    iFolder you want. The search result will open to the same page with the search 
-    text highlighted in the search result. </p>
-  <p>Use one or more of the following search methods: </p>
+  <h3><a name="browse"></a>Pesquisando pastas do iFolder</h3>
+  <p> A ferramenta de pesquisa localizada na parte superior direita da p&aacute;gina ajuda voc&ecirc; a localizar o iFolder desejado. O resultado da pesquisa ser&aacute; aberto na mesma p&aacute;gina com o texto pesquisado real&ccedil;ado no resultado da pesquisa.  </p>
+  <p>Use um ou mais dos seguintes m&eacute;todos de pesquisa: </p>
   <UL><LI>
-      <P>Select a filter criterion (All, Recent, Owned, Shared) for the name of 
-        the iFolder, then type one or more letters in the Search iFolders field.</P>
-    </LI><LI><P>Type an asterisk 
-(*) in the Search iFolders field to return a list of all iFolders on the system.</P></LI><LI><P>Leave 
-the Search iFolders field empty to return a list of all iFolders on the system.</P></LI></UL>
-  <p>Do not click anywhere in the page until the page completely refreshes, then 
-    you can browse the iFolders listed in the Search Results. Scroll up and down 
-    to browse the search results and locate the iFolder you want to manage. The 
-    combination of the iFolder's name and date created can help you identify the 
-    iFolder you seek.</P>
-  <p>Click the iFolder's 
-name to view a list of its folders and files, upload and download files, 
-create folders, and delete folders and files.</p>
-<p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a></p>
-  <h3><a name="manage"></a>Create a New iFolder</h3>
-  <p>Perform the following steps to create a new iFolder:</p>
+      <P>Selecione um crit&eacute;rio de filtro (Todos, Recente, Propriet&aacute;rio, Compartilhado) para o nome do iFolder, digite uma ou mais letras no campo Pesquisar iFolders.</P>
+    </LI><LI><P>Digite um asterisco (*) no campo Pesquisar iFolders para retornar uma lista de todos os iFolders no sistema.</P></LI><LI><P>Deixe o campo Pesquisar iFolders vazio para retornar uma lista de todos os iFolders no sistema.</P></LI></UL>
+  <p>N&atilde;o clique em nada na p&aacute;gina at&eacute; que ela seja totalmente atualizada; em seguida, voc&ecirc; poder&aacute; procurar as pastas do iFolder listadas nos Resultados da Pesquisa. Role para cima e para baixo para procurar os resultados da pesquisa e localizar o iFolder que deseja gerenciar. A combina&ccedil;&atilde;o do nome e da data de cria&ccedil;&atilde;o do iFolder pode ajudar voc&ecirc; a identificar o iFolder que voc&ecirc; procura.</P>
+  <p>Clique no nome da pasta do iFolder para ver uma lista de pastas e arquivos, fazer upload e download de arquivos, criar pastas e apagar pastas e arquivos.</p>
+<p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a></p>
+  <h3><a name="manage"></a>Criar um novo iFolder</h3>
+  <p>Realize as seguintes etapas para criar um novo iFolder:</p>
   <ol>
     <li> 
-      <p>Click the New iFolder link given in the Home page.</p>
+      <p>Clique no link Novo iFolder fornecido na Home page.</p>
     </li>
     <li> 
-      <p>On the new page that opens, specify the information, then click Create.</p>
+      <p>Na nova p&aacute;gina aberta, especifique as informa&ccedil;&otilde;es e clique em Criar.</p>
     </li>
   
   </ol>
   
-  <h3><a name="delete"></a>Delete an iFolder</h3>
-  <p>To delete an iFolder:</p>
+  <h3><a name="delete"></a>Apagar um iFolder</h3>
+  <p>Para apagar um iFolder:</p>
   <ol>
   <li> 
-      <p>Click the iFolder you want to delete. </p>
+      <p>Clique no iFolder que voc&ecirc; deseja apagar. </p>
     </li>
     <li> 
-      <p>On the iFolder page that opens, click Delete link given in the page. 
+      <p>Na p&aacute;gina do iFolder aberta, clique em Apagar no link fornecido na p&aacute;gina. 
       <p> 
-      <p>A dialogue box appears that asks you whether you want to delete the current 
-        iFolder. </p>
+      <p>Aparece uma caixa de di&aacute;logo perguntando se voc&ecirc; deseja apagar o iFolder atual. </p>
     </li>
     <li> 
-      <p>Click OK in the dialogue box to confirm the iFolder deletion. </p>
+      <p>Clique em OK na caixa de di&aacute;logo para confirmar a exclus&atilde;o do iFolder </p>
     </li>
-    <li>Click Cancel to cancel the operation.</li>
+    <li>Clique em Cancelar para cancelar a opera&ccedil;&atilde;o.</li>
   </ol>
-  <h3><a name="quota"></a>iFolder Quota</h3>
-  <p> You can view the total space allocated for the currrent account. At the 
-    left side of the page, it shows the used space as well as the total space 
-    available for use.</p>
-  <P><font size="-1"><b>IMPORTANT:</b> If you are a LDAPGroup member, disk quota 
-    for the LDAPGroup is displayed unless it is set at the user level.</font></P> 
+  <h3><a name="quota"></a>Quota do iFolder</h3>
+  <p> Voc&ecirc; pode ver o espa&ccedil;o total alocado para a conta atual. O espa&ccedil;o usado e o total de espa&ccedil;o dispon&iacute;vel para uso s&atilde;o exibidos no lado esquerdo da p&aacute;gina.</p>
+  <P><font size="-1"><b>IMPORTANTE:</b> Se voc&ecirc; for membro de um Grupo LDAP, a quota de disco do grupo ser&aacute; exibida, a menos que seja definida no n&iacute;vel do usu&aacute;rio.</font></P> 
   
-  <p> To view the iFolder quota for any given iFolder, click iFolder link to open 
-    the iFolder Browse page. You can view the used and available space for the 
-    current iFolder listed under iFolder Quota at the left side of the Browse 
-    page.</p>
-<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="newifolder.html">Create a New iFolder</A><br><A HREF="browse.html">Accessing Folders and Files in Your iFolder</A><BR><A HREF="details.html">Viewing iFolder Properties
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><P CLASS="copyright">A 
-trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP>, 
-etc.) denotes a Novell trademark. An asterisk (*) denotes a third-party 
-trademark. For more information, see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+  <p> Para ver a quota de qualquer iFolder, clique no link do iFolder para abrir a p&aacute;gina Procurar iFolder. Voc&ecirc; pode ver o espa&ccedil;o usado e dispon&iacute;vel para o iFolder atual listado na Cota do iFolder no lado esquerdo da p&aacute;gina Procurar.</p>
+<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="newifolder.html">Criar um novo iFolder</A><br><A HREF="browse.html">Acessando pastas e arquivos no seu iFolder</A><BR><A HREF="details.html">Vendo as propriedades do iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A></P><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 
 </body> 
 
