--- a/src/webaccess/help/pt-BR/legalnotices.html
+++ b/src/webaccess/help/pt-BR/legalnotices.html
@@ -3,9 +3,10 @@
 <head>
 <!-- Novell iFolder 3.x Web Access --> 
 
-<title>Legal Notices</title> 
+<title>Informa&ccedil;&otilde;es Legais</title> 
 
 <!-- Metadata --> 
+<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <meta name="Author" content="iFolder 3.x Documentation Manager"> 
 <meta name="date" content="02-17-2005"> 
 <meta name="modified" content="06-29-2005"> 
@@ -43,39 +44,10 @@
   <td align="right" width="100%" class="tabCell" style="background-image: url('../../images/header_background.gif'); background-repeat: no-repeat"></td></tr></table></div><!-- This is end of the Help Banner Layer --> 
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> <!-- 	The Page Heading uses CSS style "head3b". This creates an H3 header
 		with a line beneath it.
---> <h3 class="head3b">Legal Notices</h3><p>Novell, Inc., makes no representations 
-or warranties with respect to the contents or use of this documentation, and specifically 
-disclaims any express or implied warranties of merchantability or fitness for 
-any particular purpose. Further, Novell, Inc., reserves the right to revise this 
-publication and to make changes to its content, at any time, without obligation 
-to notify any person or entity of such revisions or changes.</p>
-  <p>Further, Novell, Inc., makes no representations or warranties with respect 
-    to any software, and specifically disclaims any express or implied warranties 
-    of merchantability or fitness for any particular purpose. Further, Novell 
-    Inc., reserves the right to make changes to any and all parts of Novell software, 
-    at any time, without any obligation to notify any person or entity of such 
-    changes.</p>
-  <h3>Export Notice</h3>
-  <p>Any products or technical information provided under this Agreement may be 
-    subject to U.S. export controls and the trade laws of other countries. You 
-    agree to comply with all export control regulations and to obtain any required 
-    licenses or classification to export, re-export or import deliverables. You 
-    agree not to export or re-export to entities on the current U.S. export exclusion 
-    lists or to any embargoed or terrorist countries as specified in the U.S. 
-    export laws. You agree to not use deliverables for prohibited nuclear, missile, 
-    or chemical biological weaponry end uses. See the <a href="http://www.novell.com/info/exports/">Novell 
-    International Trade Services Web page </a> for more information on exporting 
-    Novell software. Novell assumes no responsibility for your failure to obtain 
-    any necessary export approvals.</p>
-  <h3>Copyright</h3>
-  <p>Copyright &copy; 2005-2007 Novell, Inc. All rights reserved. No part of this 
-    publication may be reproduced, photocopied, stored on a retrieval system, 
-    or transmitted without the express written consent of the publisher.</p>
-  <h3>Novell Trademarks</h3><p>For Novell trademarks, see <a href=http://www.novell.com/company/legal/ trademarks/tmlist.html>the Novell Trademark and Service Mark list</a> </p><h3>Third-Party Trademarks</h3><p>All third-party trademarks are 
-the property of their respective owners.</p><h3>Documentation Conventions</h3><p>This 
-documentation uses a greater-than symbol (&gt;) to separate actions within a step 
-and items in a cross-reference path.</p><p>A trademark symbol (<sup><small>&reg;</small></sup>, 
-<sup><small>TM</small></sup>, etc.) denotes a Novell trademark. An asterisk (*) 
-denotes a third-party trademark.</p></div>
+--> <h3 class="head3b">Informa&ccedil;&otilde;es legais</h3><p>A Novell, Inc. n&atilde;o faz representa&ccedil;&otilde;es ou garantias quanto ao conte&uacute;do ou &agrave; utiliza&ccedil;&atilde;o desta documenta&ccedil;&atilde;o e especificamente se isenta de quaisquer garantias de comerciabilidade expressas ou impl&iacute;citas ou adequa&ccedil;&atilde;o a qualquer prop&oacute;sito espec&iacute;fico. A Novell, Inc. reserva-se o direito de revisar esta publica&ccedil;&atilde;o e fazer mudan&ccedil;as em seu conte&uacute;do, a qualquer momento, sem a obriga&ccedil;&atilde;o de notificar qualquer pessoa ou entidade sobre essas revis&otilde;es ou mudan&ccedil;as.</p>
+  <p>Al&eacute;m disso, a Novell, Inc. n&atilde;o faz representa&ccedil;&otilde;es nem garantias com rela&ccedil;&atilde;o a qualquer software, e isenta-se de quaisquer garantias de comerciabilidade expressas ou impl&iacute;citas ou adequa&ccedil;&atilde;o a qualquer prop&oacute;sito espec&iacute;fico. Al&eacute;m disso, a Novell Inc. se reserva o direito de fazer mudan&ccedil;as em qualquer e todas as partes do software Novell, a qualquer momento, sem nenhuma obriga&ccedil;&atilde;o de notificar qualquer pessoa ou entidade sobre tais mudan&ccedil;as.</p>
+  <h3>Aviso de exporta&ccedil;&atilde;o</h3>
+  <p>Quaisquer informa&ccedil;&otilde;es t&eacute;cnicas ou sobre produtos fornecidas de segundo os termos do presente Contrato est&atilde;o sujeitas aos controles de exporta&ccedil;&atilde;o dos EUA e &agrave;s leis comerciais de outros pa&iacute;ses. Voc&ecirc; concorda em cumprir todos os regulamentos do controle de exporta&ccedil;&atilde;o e em obter as licen&ccedil;as ou a classifica&ccedil;&atilde;o necess&aacute;rias para exportar, reexportar ou importar produtos finais. Voc&ecirc; concorda em n&atilde;o exportar nem reexportar para entidades que constam nas listas de exclus&atilde;o de exporta&ccedil;&atilde;o atual dos EUA nem para qualquer pa&iacute;s sob embargo ou terrorista, conforme especificado nas leis de exporta&ccedil;&atilde;o dos EUA. Voc&ecirc; concorda em n&atilde;o usar produtos para fins proibidos relacionados a armas nucleares, biol&oacute;gicas e qu&iacute;micas ou m&iacute;sseis. Consulte a <a href="http://www.novell.com/info/exports/">p&aacute;gina do Novell International Trade Services na Web</a> para obter mais informa&ccedil;&otilde;es sobre como exportar softwares da Novell.   A Novell n&atilde;o se responsabiliza pela falha na aquisi&ccedil;&atilde;o de quaisquer aprova&ccedil;&otilde;es necess&aacute;rias para exporta&ccedil;&atilde;o.</p>
+  <h3>Marcas registradas da Novell</h3><p>Para as marcas registradas da Novel, consulte <a href=http://www.novell.com/company/legal/ trademarks/tmlist.html>a lista de marcas registradas e Marcas de Servi&ccedil;o da Novell</a> </p><h3>Marcas registradas de terceiros</h3><p>Todas as marcas registradas de terceiros pertencem aos seus respectivos propriet&aacute;rios.</p><h3>Conven&ccedil;&otilde;es da documenta&ccedil;&atilde;o</h3><p>Nesta documenta&ccedil;&atilde;o, um s&iacute;mbolo de maior que (&gt;) &eacute; utilizado para separar a&ccedil;&otilde;es dentro de uma etapa e itens em um caminho de refer&ecirc;ncia cruzada.</p><p>Um s&iacute;mbolo de marca registrada (<sup><small>&reg;</small></sup>, <sup> <small>TM</small></sup>) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. </p></div>
 </body>
 </html>
