--- a/src/webaccess/help/pt-BR/login.html
+++ b/src/webaccess/help/pt-BR/login.html
@@ -1,10 +1,10 @@
 <html>
 
    <head>
-<meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+<meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access --> 
-<title>Web Access Login</title> 
+<title>Login no Web Access</title> 
 
 <!-- Metadata --> <meta name="Author" content="iFolder 3.x Documentation Manager"> 
 <meta name="date" content="02-17-2005"> 
@@ -46,33 +46,16 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> 
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
-       --> <h3 class="head3b">Logging in to Web Access</h3>
-  <p> Log in to Novell iFolder<sup><small>&reg;</small></sup> 3.7 Web Access to 
-    gain access to folders and files in any iFolders available to you or to the 
-    LDAPGroup you are a member of in the iFolder 3.7 account. This includes iFolders 
-    that you participate in but have not set up on a local computer. (You cannot 
-    access files in your Novell iFolder 2.<I>x</I> account with Web Access.) Your 
-    username and password are authenticated against the LDAP directory services. 
+       --> <h3 class="head3b">Efetuando login no Web Access</h3>
+  <p> Efetue login no Web Access do Novell iFolder<sup><small>&reg;</small></sup> 3.7 para ter acesso a pastas e arquivos de qualquer pasta do iFolder dispon&iacute;vel a voc&ecirc; ou ao seu Grupo LDAP na conta do iFolder 3.7. Isso inclui pastas do iFolder das quais voc&ecirc; participa, mas que n&atilde;o est&atilde;o configuradas em um computador local. (N&atilde;o &eacute; poss&iacute;vel acessar arquivos em sua conta do Novell iFolder 2.<I>x</I> com o Web Access.) A sua senha e o seu nome de usu&aacute;rio ser&atilde;o autenticados em rela&ccedil;&atilde;o aos servi&ccedil;os de diret&oacute;rio LDAP. 
   </p>
-  <p>You can also specify which of the supported languages to use. This is typically 
-    the same language as the language code of the iFolder enterprise server and 
-    your local computer. Make sure to configure your browser's Languages setting 
-    to support the desired language. </p>
-  <ol><li><p> Specify the username and password for the 
-iFolder account you want to access. <br><br>
-        Usernames and passwords are case sensitive. </p>
-    </li><li><p>Use the Languages drop-down list 
-to specify which language you want to use to access your files. <br></p></li><li><p>Click 
-Log In.</p></li></ol>
-<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
-  <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="browse.html">Accessing Folders and Files in Your iFolder
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A>
-<P CLASS="copyright">A trademark symbol 
-(<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP>, etc.) 
-denotes a Novell trademark. An asterisk (*) denotes a third-party trademark. 
-For more information, see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+  <p>Voc&ecirc; tamb&eacute;m pode especificar quais dos idiomas suportados ser&atilde;o usados. Geralmente s&atilde;o os mesmos idiomas que o c&oacute;digo de idioma do servidor empresarial do iFolder e do seu computador local. Defina a configura&ccedil;&atilde;o Idiomas do browser para que o idioma desejado seja suportado. </p>
+  <ol><li><p> Especifique o nome de usu&aacute;rio e a senha da conta do iFolder que deseja acessar. <br><br>
+        Nomes de usu&aacute;rio e senhas diferenciam mai&uacute;sculas de min&uacute;sculas. </p>
+    </li><li><p>Use a lista suspensa Idiomas para especificar qual idioma deseja usar para acessar os arquivos. <br></p></li><li><p>Clique em Efetuar Login.</p></li></ol>
+<A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
+  <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Acessando seus iFolders</A><BR><A HREF="browse.html">Acessando pastas e arquivos no seu iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A>
+<P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 
 </html>
