--- a/src/webaccess/help/pt-BR/newfolder.html
+++ b/src/webaccess/help/pt-BR/newfolder.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Create Folders</title> 
+<title>Para criar pastas</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -43,18 +43,11 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        -->
-  <h3>Creating a New Folder</h3> 
+  <h3>Criar uma nova pasta</h3> 
    
-  <p>In the Name field, specify the name of the new folder, then click Create.</p>
-  <p>Folder names are case sensitive. 
-When the page refreshes, the folder appears alphabetically in the list.</p>
-      <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="details.html">Viewing iFolder Properties
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
-<SUP><SMALL>TM</SMALL></SUP>, etc.) denotes a Novell trademark. An 
-asterisk (*) denotes a third-party trademark. For more information, 
-see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+  <p>No campo Nome, especifique o nome da nova pasta e clique em Criar.</p>
+  <p>Os nomes de pastas diferenciam mai&uacute;sculas de min&uacute;sculas. Quando a p&aacute;gina &eacute; atualizada, a pasta &eacute; exibida em ordem alfab&eacute;tica na lista.</p>
+      <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Acessando as pastas do iFolder</A><BR><A HREF="details.html">Vendo as propriedades do iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 </html>
