--- a/src/webaccess/help/pt-BR/share.html
+++ b/src/webaccess/help/pt-BR/share.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Adding shared members</title> 
+<title>Adicionando membros compartilhados</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -42,42 +42,29 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b"><a name="top"></a>Adding New Shared User</h3>
-  <p>To add a new user or LDAPGroup to the list of shared user,</p>
+  <h3 class="head3b"><a name="top"></a>Adicionando novo usu&aacute;rio compartilhado</h3>
+  <p>Para adicionar um novo usu&aacute;rio ou Grupo LDAP &agrave; lista de usu&aacute;rios compartilhados,</p>
   <ol>
     <li> 
-      <p>Use the search functionality to locate the user or LDAPGroup you want 
-        to share the iFolder with.</p>
+      <p>Use a funcionalidade de pesquisa para localizar o usu&aacute;rio ou Grupo LDAP com o qual voc&ecirc; deseja compartilhar o iFolder. </p>
     </li>
     <P> 
-    <P>Select a filter criterion (Username, First Name, Last Name) , then type 
-      one or more letters in the Search field.</P>
+    <P>Selecione um crit&eacute;rio de filtro (Nome de Usu&aacute;rio, Nome, Sobrenome) e digite uma ou mais letras no campo Pesquisar.</P>
     <li> 
-      <p> Click <img src="../../images/list-add.png" width="16" height="16" alt="File icon"> 
-        (the blue plus sign is blue in colour) to add the users to the list of 
-        shared users. </p>
-      <p>The added members appear at the right side of the page under Share 
-      with. After a user is added, the plus sign next to the iFolder name turns to 
-      black. </p>
-      <p> When you share an iFolder with an LDAPGroup, it is shared with all the 
-        members of the LDAPGroup.</p>
+      <p> Clique no <img src="../../images/list-add.png" width="16" height="16" alt="&iacute;cone Arquivo"> (o sinal de mais em azul) para adicionar os usu&aacute;rios &agrave; lista de usu&aacute;rios compartilhados. </p>
+      <p>Os membros adicionados aparecem no lado direito da p&aacute;gina em Compartilhar com. Depois que um usu&aacute;rio for adicionado, o sinal de mais ao lado do nome do iFolder fica preto. </p>
+      <p> Quando voc&ecirc; compartilha uma pasta do iFolder com um Grupo LDAP, ele &eacute; compartilhado com todos os membros do grupo.</p>
     </li><li> 
-      <p>Click share to confirm sharing.</p>
+      <p>Clique em Compartilhar para confirmar o compartilhamento.</p>
     
-    <p>Click Cancel to cancel all your operations on this page.
+    <p>Clique em Cancelar para cancelar todas as opera&ccedil;&otilde;es nesta p&aacute;gina.
     <p> 
   </ol>
 	
   
-  <p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="browse.html">Accessing Folders and Files in Your iFolder</A><BR><A HREF="details.html">Viewing iFolder Properties
-</A><BR><A HREF="home.html">Accessing Your iFolders</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><P>&nbsp;</P>
+  <p><a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="browse.html">Acessando pastas e arquivos no seu iFolder</A><BR><A HREF="details.html">Vendo as propriedades do iFolder</A><BR><A HREF="home.html">Acessando suas pastas do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A></P><P>&nbsp;</P>
   <P CLASS="copyright">&nbsp;</p>
-  <p>&nbsp;</p><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
-<SUP><SMALL>TM</SMALL></SUP>, etc.) denotes a Novell trademark. An 
-asterisk (*) denotes a third-party trademark. For more information, 
-see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+  <p>&nbsp;</p><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 </html>
