--- a/src/webaccess/help/pt-BR/upload.html
+++ b/src/webaccess/help/pt-BR/upload.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"> 
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8"> 
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Uploading Files</title> 
+<title>Fazendo upload de arquivos</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -42,27 +42,15 @@
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> 
-  <h3 class="head3b"><a name="top"></a>Upload 
-a File</h3>
+  <h3 class="head3b"><a name="top"></a>Fazer upload de um arquivo</h3>
   <ol><li>
-      <p>In the Upload File field, click Browse to locate the local file you want 
-        to upload.</p>
+      <p>No campo Fazer Upload do Arquivo, clique em Procurar para localizar o arquivo local do qual voc&ecirc; deseja fazer upload. </p>
     </li><li>
-      <p> Select the file, and then click Open &gt; Upload.</p>
-    </li> When the page 
-refreshes, the file appears alphabetically in the list. By default, if you 
-      upload a file with the same file name, it will be overwritten. If you do 
-      not want to overwrite existing files, clear the
-      <span id="OverWriteExistingFile">Overwrite Existing Files check box.</span><br>
+      <p> Selecione o arquivo e clique em Abrir &gt; Upload.</p>
+    </li> Quando a p&aacute;gina &eacute; atualizada, o arquivo &eacute; exibido em ordem alfab&eacute;tica na lista. Por padr&atilde;o, se voc&ecirc; fizer upload de um arquivo com o mesmo nome, ele ser&aacute; sobrescrito. Caso n&atilde;o deseje sobrescrever arquivos existentes, desmarque a <span id="OverWriteExistingFile">caixa de sele&ccedil;&atilde;o Sobrescrever arquivos existentes.</span><br>
 &nbsp;</ol>
   
-<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
-<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
-Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="details.html">Viewing iFolder Properties
-</A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
-<SUP><SMALL>TM</SMALL></SUP>, etc.) denotes a Novell trademark. An 
-asterisk (*) denotes a third-party trademark. For more information, 
-see <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
-Notices</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
+<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Ir para o in&iacute;cio"></a>
+<H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="T&oacute;picos relacionados" align="top"> T&oacute;picos relacionados</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Acessando as pastas do iFolder</A><BR><A HREF="details.html">Vendo as propriedades do iFolder</A><BR><A HREF="members.html">Gerenciando membros do iFolder</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Ir para o in&iacute;cio"></A><P CLASS="copyright">Um s&iacute;mbolo de marca registrada (<SUP><SMALL>&reg;, </SMALL></SUP>,<SUP><SMALL>TM</SMALL></SUP> etc.) indica uma marca registrada da Novell. Um asterisco (*) indica uma marca registrada de terceiros. Para obter mais informa&ccedil;&otilde;es, consulte <A HREF="legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Informa&ccedil;&otilde;es Legais</font></A>.</P></div><!-- This is the end of the Help Content layer. --> 
 </body>
 </html>
