Select Both is not available in iFolder Admin Manage Group Quota. Help files have been updated
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7162 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/help/cs/systeminfo.html
+++ b/src/admin/help/cs/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Chcete-li, aby agreg&aacute;tn&iacute; diskovou kv&oacute;tu skupin na straně serveru spravoval modul synchronizace, vyberte možnost <i>Modul synchronizace</i>. Modul synchronizace zajišťuje, že diskov&aacute; kv&oacute;ta pro všechny uživatele ve skupině nepřes&aacute;hne agreg&aacute;tn&iacute; diskovou kv&oacute;tu skupiny.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Chcete-li spravovat využit&iacute; agreg&aacute;tn&iacute; diskov&eacute; kv&oacute;ty pro skupiny pomoc&iacute; konzole spr&aacute;vy i modulu synchronizace, vyberte možnost <i>Oboj&iacute;</i>.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Oddělen&eacute; skupiny</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Umožňuje rozdělit skupiny na nez&aacute;visl&eacute; entity a zajistit, aby uživatel&eacute; jedn&eacute; skupiny nebyli dostupn&iacute; pro uživatele jin&eacute; skupiny za &uacute;čelem sd&iacute;len&iacute; složek iFolder. Chcete-li umožnit sd&iacute;len&iacute; složek iFolder pouze mezi členy stejn&eacute; skupiny, zaškrtněte pol&iacute;čko <i>Vytvořit oddělen&eacute; skupiny</i>.</span><p>
         <span style="font-family: Arial; ">Pozn&aacute;mka: </span><span style="font-size: 11.0pt; font-family: Arial; ">Skupina LDAPGroup nemůže b&yacute;t sekund&aacute;rn&iacute; ani prim&aacute;rn&iacute; spr&aacute;vce.</span></TD></TR></TABLE>
