--- a/src/admin/help/de/systeminfo.html
+++ b/src/admin/help/de/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">W&auml;hlen Sie die Option <i>Synchronisierungs-Engine</i> aus, damit die Synchronisierungs-Engine die Gesamtspeicherplatzquote f&uuml;r Gruppen im Backend verwalten kann. Die Synchronisierungs-Engine stellt sicher, dass die Speicherplatzquote f&uuml;r alle Benutzer in der Gruppe die Gesamtspeicherplatzquote der Gruppe nicht &uuml;bersteigt.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">W&auml;hlen Sie die Option <i>Beides</i> aus, um sowohl die Verwaltungskonsole als auch die Synchronisierungs-Engine zur Verwaltung der gesamten Speicherplatzquotenauslastung f&uuml;r Gruppen zu verwenden.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Aufgeteilte Gruppen</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Mit dieser Option k&ouml;nnen Sie Gruppen in unabh&auml;ngige Einheiten aufteilen und sicherstellen, dass die Mitglieder einer Gruppe nicht auf die Mitglieder einer anderen Gruppe zugreifen und iFolder-Ordner freigeben k&ouml;nnen. Aktivieren Sie das Kontrollk&auml;stchen f&uuml;r <i>Aufgeteilte Gruppen erstellen</i>, um die Freigabe von iFolder-Ordnern auf die Mitglieder derselben Gruppe zu beschr&auml;nken.</span><p>
         <span style="font-family: Arial; ">Hinweis: </span> <span style="font-size: 11.0pt; font-family: Arial; ">Eine LDAP-Gruppe kann kein sekund&auml;rer oder prim&auml;rer Administrator sein.</span></TD></TR></TABLE>
