--- a/src/admin/help/en/systeminfo.html
+++ b/src/admin/help/en/systeminfo.html
@@ -149,9 +149,8 @@ div.Section1
         disk quota for all users in a group does not exceed the aggregate disk 
         quota of the group.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Select 
-        the <i>Both</i> option to use both the administrator console and the sync engine 
-        to manage the aggregate disk quota usage for groups.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">
         Segregated Groups</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; ">
