--- a/src/admin/help/es/systeminfo.html
+++ b/src/admin/help/es/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Seleccione la opci&oacute;n <i>Motor de sincronizaci&oacute;n</i> para permitir al motor de sincronizaci&oacute;n gestionar la cuota de disco en conjunto en grupos en el sistema secundario. El motor de sincronizaci&oacute;n garantiza que la cuota de disco para todos los usuarios de un grupo no superar&aacute; la cuota de disco en conjunto del grupo.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Seleccione la opci&oacute;n <i>Ambos</i> para utilizar tanto la consola de administrador como el motor de sincronizaci&oacute;n para gestionar el uso de la cuota de disco en conjunto para los grupos.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Grupos segregados</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Permite segregar grupos en entidades independientes y garantizar que los miembros de otro grupo no pueden acceder a los miembros de un grupo para compartir carpetas iFolder. Seleccione el recuadro de verificaci&oacute;n <i>Crear grupos segregados</i> para habilitar el uso compartido de carpetas iFolder s&oacute;lo entre los miembros del mismo grupo.</span><p>
         <span style="font-family: Arial; ">Nota: </span> <span style="font-size: 11.0pt; font-family: Arial; ">un grupo LDAP no puede ser un administrador principal o secundario.</span></TD></TR></TABLE>
