--- a/src/admin/help/fr/systeminfo.html
+++ b/src/admin/help/fr/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">S&eacute;lectionnez l'option <i>Moteur de synchronisation</i> pour permettre au moteur de synchronisation de g&eacute;rer le quota de disque total pour les groupes sur l'interface dorsale. Le moteur de synchronisation veille &agrave; ce que le quota de disque pour tous les utilisateurs d'un groupe ne d&eacute;passe pas le quota de disque total du groupe.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">S&eacute;lectionnez l'option <i>Les deux</i> pour utiliser la console de l'administrateur et le moteur de synchronisation afin de g&eacute;rer l'utilisation du quota de disque total pour les groupes.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Groupes distincts</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Vous permet de s&eacute;parer les groupes en entit&eacute;s ind&eacute;pendantes et de veiller &agrave; ce que les membres d'un groupe ne soient pas accessibles aux membres d'un autre groupe pour le partage de dossiers iFolder. Cochez la case <i>Cr&eacute;er des groupes distincts</i> pour n'activer le partage de dossiers iFolder que parmi les membres du m&ecirc;me groupe.</span><p>
         <span style="font-family: Arial; ">Remarque&nbsp;:</span> <span style="font-size: 11.0pt; font-family: Arial; ">un groupe LDAP ne peut pas &ecirc;tre un administrateur secondaire ni primaire.</span></TD></TR></TABLE>
