--- a/src/admin/help/it/systeminfo.html
+++ b/src/admin/help/it/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Selezionare l'opzione relativa al <i>motore di sincronizzazione</i> per abilitare il motore di sincronizzazione per la gestione della quota del disco complessiva per i gruppi in back end. Il motore di sincronizzazione garantisce che la quota del disco per tutti gli utenti di un gruppo non superi la quota del disco complessiva del gruppo.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Selezionare l'opzione <i>Entrambi</i> per utilizzare la console dell'amministratore e il motore di sincronizzazione per la gestione dell'uso della quota del disco complessiva per i gruppi.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Gruppi segregati</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Consente di segregare i gruppi in entit&agrave; indipendenti e garantire che i membri di un gruppo non siano in grado di accedere ai membri dell'altro gruppo per la condivisione delle cartelle iFolder. Selezionare la casella di controllo relativa alla <i>Creazione di gruppi segregati</i> per abilitare la condivisione delle cartelle iFolder solo tra i membri dello stesso gruppo.</span><p>
         <span style="font-family: Arial; ">Nota: </span> <span style="font-size: 11.0pt; font-family: Arial; ">un gruppo LDAP non pu&ograve; essere un amministratore principale o secondario.</span></TD></TR></TABLE>
