--- a/src/admin/help/ja/systeminfo.html
+++ b/src/admin/help/ja/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">［Sync Engine (同期エンジン)<i></i>］オプションを選択すると、同期エンジンで、グループの合計ディスク割り当て量をバックエンドで管理できます。同期エンジンを使用すると、グループ内のすべてのユーザに対するディスク割り当て量がグループの合計ディスク割り当て量を超えないようにすることができます。</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">［両方<i></i>］オプションを選択すると、管理コンソールと同期エンジンの両方を使用して、グループの合計ディスク割り当て量の使用状況を管理できます。</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">分離グループ</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; ">個々のグループを個別のエンティティとして分離して、あるグループのメンバーに別のグループのメンバーがアクセスして、iFolderを共有できないようにします。［Create Segregated Groups (分離グループの作成)<i></i>］チェックボックスをオンにすると、同じグループのメンバー間でのみiFolderを共有できます。</span><p>
         <span style="font-family: Arial; ">注意: </span> <span style="font-size: 11.0pt; font-family: Arial; ">LDAPGroupをセカンダリまたはプライマリ管理者にすることはできません。</span></TD></TR></TABLE>
