--- a/src/admin/help/pl/systeminfo.html
+++ b/src/admin/help/pl/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Wybranie opcji <i>Mechanizm synchronizacji</i> powoduje zarządzanie łącznym przydziałem dysku dla grup przez mechanizm synchronizacji na zapleczu. Mechanizm synchronizacji gwarantuje, że przydział dysku wszystkich użytkownik&oacute;w w grupie nie przekroczy łącznego przydziału dysku tej grupy.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Opcja <i>Obydwa</i> umożliwia zarządzanie łącznym użyciem przydziału dysku dla grup zar&oacute;wno za pomocą konsoli administratora, jak i za pomocą mechanizmu synchronizacji.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Grupy oddzielone</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Umożliwia rozdzielenie grup na odrębne jednostki, w wyniku czego członkowie r&oacute;żnych grup nie mogą wsp&oacute;łużytkować folder&oacute;w iFolder. Zaznaczenie pola wyboru <i>Utw&oacute;rz grupy oddzielone</i> powoduje, że  foldery iFolder mogą być wsp&oacute;łużytkowane tylko przez członk&oacute;w tej samej grupy.</span><p>
         <span style="font-family: Arial; ">Uwaga:</span> <span style="font-size: 11.0pt; font-family: Arial; ">grupa LDAP nie może być administratorem dodatkowym ani podstawowym.</span></TD></TR></TABLE>
