--- a/src/admin/help/pt-BR/systeminfo.html
+++ b/src/admin/help/pt-BR/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Selecione a op&ccedil;&atilde;o <i>Mecanismo de Sincroniza&ccedil;&atilde;o</i> para habilitar o mecanismo de sincroniza&ccedil;&atilde;o para gerenciar a quota de discos agregados em grupos no back end. O mecanismo de sincroniza&ccedil;&atilde;o garante que a quota de discos de todos os usu&aacute;rios em um grupo n&atilde;o exceda a quota de discos agregados do grupo.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Selecione a op&ccedil;&atilde;o <i>Ambos</i> para usar o console do administrador e o mecanismo de sincroniza&ccedil;&atilde;o para gerenciar o uso da quota de discos agregados dos grupos.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Grupos Segregados</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Permite segregar grupos em entidades independentes e garantir que os membros de um grupo n&atilde;o poder&atilde;o ser acessados por membros de outro grupo para compartilhar iFolders. Marque a caixa de sele&ccedil;&atilde;o <i>Criar Grupos Segregados</i> para permitir o compartilhamento de iFolders apenas entre membros do mesmo grupo.</span><p>
         <span style="font-family: Arial; ">Nota: </span> <span style="font-size: 11.0pt; font-family: Arial; ">Um Grupo LDAP n&atilde;o pode ser um Administrador Secund&aacute;rio ou Prim&aacute;rio.</span></TD></TR></TABLE>
