--- a/src/admin/help/ru/systeminfo.html
+++ b/src/admin/help/ru/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">Вариант <i>Подсистема синхронизации</i> позволяет управлять совокупной квотой диска для групп в серверном компоненте с помощью подсистемы синхронизации. Подсистема синхронизации проверяет, чтобы квота диска для всех пользователей группы не превышала совокупную квоту диска группы.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Вариант <i>Оба</i> позволяет использовать для управления совокупной квотой диска групп как консоль администратора, так и подсистему синхронизации.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">Выделенные группы</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Позволяет выделять группы в независимые объекты и изолировать при совместном использовании папок iFolder членов одной группы от доступа к ним членов другой группы. Установите флажок <i>Создать выделенные группы</i>, чтобы разрешить совместное использование папок iFolder только в пределах групп.</span><p>
         <span style="font-family: Arial; ">Примечание.</span> <span style="font-size: 11.0pt; font-family: Arial; ">Группа LDAPGroup не может быть ни дополнительным, ни основным администратором.</span></TD></TR></TABLE>
