--- a/src/admin/help/sk/systeminfo.html
+++ b/src/admin/help/sk/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">V&yacute;berom možnosti <i>N&aacute;stroj na synchroniz&aacute;ciu</i> umožn&iacute;te n&aacute;stroju na synchroniz&aacute;ciu spravovať agregovan&uacute; kv&oacute;tu disku pre skupiny v serverovej časti. N&aacute;stroj na synchroniz&aacute;ciu zabezpeč&iacute;, že kv&oacute;ta disku pre všetk&yacute;ch použ&iacute;vateľov v skupine neprekroč&iacute; agregovan&uacute; kv&oacute;tu disku pre skupinu.</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">Pri v&yacute;bere možnosti <i>Oboje</i> sa na spravovanie agregovanej kv&oacute;ty disku pre skupiny použije konzola spr&aacute;vcu aj n&aacute;stroj na synchroniz&aacute;ciu.</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> Segregovan&eacute; skupiny</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> Umožňuje rozdeliť skupiny na nez&aacute;visl&eacute; entity, č&iacute;m sa zabezpeč&iacute;, že členovia jednej skupiny nebud&uacute; pr&iacute;stupn&iacute; pre členov inej skupiny na zdieľanie priečinkov iFolder. Začiarknut&iacute;m pol&iacute;čka <i>Vytvoriť segregovan&eacute; skupiny</i> povol&iacute;te zdieľanie priečinkov iFolder len medzi členmi tej istej skupiny.</span><p>
         <span style="font-family: Arial; ">Pozn&aacute;mka:</span> <span style="font-size: 11.0pt; font-family: Arial; ">Skupina LDAP nem&ocirc;že byť sekund&aacute;rnym ani prim&aacute;rnym spr&aacute;vcom.</span></TD></TR></TABLE>
