--- a/src/admin/help/zh-CN/systeminfo.html
+++ b/src/admin/help/zh-CN/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">选择<i>同步引擎</i>选项来启用同步引擎以便管理后端中组上的累积磁盘定额。同步引擎保证组中所有用户的磁盘定额不超过组的累积磁盘定额。</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">选择<i>两者</i>选项来使用管理员控制台和同步引擎管理组累积磁盘定额</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">分离组</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; ">使您能够将组分离成独立实体，并确保组的成员无法访问的另一组成员共享的 iFolder。选中<i>创建分离组</i>复选框以便只能够在同一组的各成员之间进行 iFolder 共享。</span><p>
         <span style="font-family: Arial; ">注意：</span><span style="font-size: 11.0pt; font-family: Arial; ">LDAPGroup 不能是二级或一级管理员。</span></TD></TR></TABLE>
