--- a/src/admin/help/zh-TW/systeminfo.html
+++ b/src/admin/help/zh-TW/systeminfo.html
@@ -119,7 +119,8 @@ div.Section1
         <p class="Normal2">
         <span style="font-size:11.0pt;font-family:Arial;">選取<i>「同步引擎」</i>選項可讓同步引擎在後端管理群組上的彙總磁碟配額。同步引擎可確保群組中所有使用者的磁碟配額不會超過群組的彙總磁碟配額。</span></p>
         <p class="Normal2">
-        <span style="font-size:11.0pt;font-family:Arial;">選取<i>「兩者」</i>選項可同時使用管理員主控台與同步引擎來管理群組的彙總磁碟配額使用空間。</span></TD></TR><TR><TD VALIGN="TOP">
+        &nbsp;</p>
+        </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; "> 隔離的群組</span></TD><TD>
         <span style="font-size: 11.0pt; font-family: Arial; "> 讓您將群組隔離為獨立的實體，並確保屬於一個群組之成員的共享 iFolder 不會被另一個群組的成員存取。選取<i>「建立隔離的群組」</i>核取方塊可限制只有相同群組的成員才能共享 iFolder。</span><p>
         <span style="font-family: Arial; ">注意：</span><span style="font-size: 11.0pt; font-family: Arial; ">LDAPGroup 不能是次要或主要管理員。</span></TD></TR></TABLE>
