updated ifolder version to 3.7 and later
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7175 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/webaccess/help/en/login.html
+++ b/src/webaccess/help/en/login.html
@@ -47,9 +47,9 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
        --> <h3 class="head3b">Logging in to Web Access</h3>
-  <p> Log in to Novell iFolder<sup><small>&reg;</small></sup> 3.7 Web Access to 
+  <p> Log in to Novell iFolder<sup><small>&reg;</small></sup> 3.7 or later Web Access to 
     gain access to folders and files in any iFolders available to you or to the 
-    LDAPGroup you are a member of in the iFolder 3.7 account. This includes iFolders 
+    LDAPGroup you are a member of in the iFolder 3.7 or later account. This includes iFolders 
     that you participate in but have not set up on a local computer. (You cannot 
     access files in your Novell iFolder 2.<I>x</I> account with Web Access.) Your 
     username and password are authenticated against the LDAP directory services. 
