updated ifolder version to 3.7 and later
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7176 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/help/en/ldapsettings.html
+++ b/src/admin/help/en/ldapsettings.html
@@ -54,7 +54,7 @@
             with a line beneath it.
        --> <h3 class="head3b">Managing the LDAP Settings for the iFolder System</h3>
   <p> Use this interface to modify the LDAP settings for the selected Novell<SUP><SMALL>&reg;</SMALL></SUP> iFolder<SUP><SMALL>&reg;</SMALL></SUP> 
-    3.7 server on this iFolder domain. </p>
+    3.7 or later server on this iFolder domain. </p>
   
   <H3><A NAME="modify"></A>Modifying 
 the LDAP Settings</H3><P>Modify any of the following fields, then click <i>OK</i> to 
