--- a/src/admin/help/en/login.html
+++ b/src/admin/help/en/login.html
@@ -58,7 +58,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Logging In to Web Admin</h3>
   
-  <P>Log in to Novell iFolder<SUP><SMALL>®</SMALL></SUP> 3.7 Web Admin to manage 
+  <P>Log in to Novell iFolder<SUP><SMALL>®</SMALL></SUP> 3.7 or later Web Admin to manage 
     ifolders and users. The iFolder Admin username and password are authenticated 
     against the LDAP directory services. </P>
   <P>You can also specify which of the supported languages to use. This is typically 
