--- a/src/admin/help/en/systeminfo.html
+++ b/src/admin/help/en/systeminfo.html
@@ -56,7 +56,7 @@ div.Section1
             with a line beneath it.
        --> <h3 class="head3b">Managing the iFolder System</h3>
   <p> Use this interface to manage Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 
-    3.7 services for the selected server.</p>
+    3.7 or later services for the selected server.</p>
   <P>This help discusses the following information:</P>
   <blockquote> <P><A HREF="#sytemsettings" TARGET="_self">System Settings
 </A> <BR><A HREF="#status" TARGET="_self">Reprovision Status</a><BR><A HREF="#admin" TARGET="_self">Administrators Tab</a><BR> <A HREF="#policy" TARGET="_self">Policies
@@ -148,8 +148,8 @@ div.Section1
         aggregate disk quota on groups in the back end. The sync engine ensures that the 
         disk quota for all users in a group does not exceed the aggregate disk 
         quota of the group.</span></p>
-        <p class="Normal2">
-        &nbsp;</p>
+        <p class="Normal2">&nbsp;
+        </p>
         </TD></TR><TR><TD VALIGN="TOP">
         <span style="font-size: 11.0pt; font-family: Arial; ">
         Segregated Groups</span></TD><TD>
@@ -422,7 +422,7 @@ the maximum file size that can be synchronized.</P>
       <TD VALIGN="TOP"> 
         <h4><span style="FONT-SIZE: 9.5pt; FONT-FAMILY: Arial">
         iFolder Per User Policy</span></h4>
-        <h4> &nbsp;</h4>
+        <h4>&nbsp; </h4>
       </TD>
       <TD> 
         <p class="Normal2">
