--- a/src/admin/help/en/users.html
+++ b/src/admin/help/en/users.html
@@ -56,7 +56,7 @@
   <h3 class="head3b">Managing a User Account</h3>
   <p> Use this interface to manage iFolder users in the selected iFolder domain. 
     The search tool helps you locate the Novell iFolder<SUP><SMALL>&reg;</SMALL></SUP> 
-    3.7 user account you want to manage. </p>
+    3.7 or later user account you want to manage. </p>
 	
   <P><B><FONT SIZE="-1">NOTE:</FONT></B> <FONT SIZE="-1">The term <i>iFolder users 
     </i> refers to both individual users and LDAPGroups.</FONT></P>
