--- a/src/admin/help/en/webacc.html
+++ b/src/admin/help/en/webacc.html
@@ -58,7 +58,7 @@
   <h3 class="head3b">Launching Web Admin</h3>
   
   <p>Web Admin console will let you manage servers, policy settings, iFolder users, 
-    and ifolders in a given iFolder 3.7 domain.You can enable users to iFolder 
+    and ifolders in a given iFolder 3.7 or later domain.You can enable users to iFolder 
     domain from LDAP users and manage iFolder servers participating in the iFolder 
     domain. With Web admin, you can also enforce encryption on users.Web Admin 
     console will have the capability to produce enhanced reports that include 
